--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-* {
+body {
   margin: 0;
   padding: 0;
-  background-color: lightgrey;
+  background-image: url("./public/static/images/mathsymbols.jpg");
 }
