--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   background-image: url("/static/images/mathsymbols.jpg");
-  font-family: Roboto;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
